# nudge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
nudge/: CMakeLists.txt
nudge/include/Nudge/: CollisionManifold.hpp  PhysicsWorld.hpp  Ray.hpp  RaycastHit.hpp  Rigidbody.hpp
nudge/include/Nudge/Colliders/: BoxCollider.hpp  Collider.hpp  SphereCollider.hpp
nudge/include/Nudge/Maths/: Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Quaternion.hpp  Vector3.hpp  Vector4.hpp
nudge/include/Nudge/Physics/Shapes/: AABB.hpp  Interval.hpp  Line.hpp  OBB.hpp  Plane.hpp  Ray.hpp  Sphere.hpp  Triangle.hpp
nudge/include/Nudge/Shapes/: AABB.hpp  Interval.hpp  Line.hpp  Mesh.hpp  OBB.hpp  Plane.hpp  Ray.hpp  Shape.hpp  Sphere.hpp  Triangle.hpp
nudge/include/nudge/: Float2.hpp  Float3.hpp  Float4x4.hpp  MathF.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Quaternion.hpp  Vector2.hpp
nudge/src/: CollisionManifold.cpp  Float2.cpp  Float2x2.cpp  Float3.cpp  Float3x3.cpp  Float4.cpp  Float4x4.cpp  MathF.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  PhysicsWorld.cpp  Quaternion.cpp  Ray.cpp  Rigidbody.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
nudge/src/Colliders/: BoxCollider.cpp  Collider.cpp  SphereCollider.cpp
nudge/src/Maths/: MathF.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
nudge/src/Physics/Shapes/: AABB.cpp  Interval.cpp  Line.cpp  OBB.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Triangle.cpp
nudge/src/Shapes/: AABB.cpp  Interval.cpp  Line.cpp  Mesh.cpp  OBB.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Triangle.cpp
tests/: CMakeLists.txt  Float2Tests.cpp  Float2x2Tests.cpp  Float3Tests.cpp  Float3x3Tests.cpp  Float4Tests.cpp  Float4x4Tests.cpp  MathFTests.cpp  Matrix2Tests.cpp  Matrix3Tests.cpp  Matrix4Tests.cpp  QuaternionTests.cpp  RayTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp  Vector4Tests.cpp
tests/Maths/: MathFTests.cpp  Matrix2Tests.cpp  Matrix3Tests.cpp  Matrix4Tests.cpp  QuaternionTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp  Vector4Tests.cpp
tests/Shapes/: AABBTests.cpp  LineTests.cpp  MeshTests.cpp  OBBTests.cpp  PlaneTests.cpp  SphereTests.cpp  TriangleTests.cpp
